# Alex-coo

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  thought_stream.py
backend/app/agents/: __init__.py  analyst.py  dashboard_builder.py  deep_dive_agent.py  monitor.py  orchestrator.py  persona.py
backend/app/api/routes/: chat.py  company.py  dashboards.py  data.py  deep_dives.py  focus.py
backend/app/data/: ingestion.py  warehouse.py
backend/app/integrations/: __init__.py  telegram_bot.py  whatsapp.py
backend/app/memory/: models.py  store.py
backend/data/: bill_of_materials.csv  customers.csv  daily_metrics.csv  inventory_snapshots.csv  materials.csv  order_line_items.csv  production_orders.csv  products.csv  purchase_orders.csv  sales_orders.csv  supplier_performance.csv  suppliers.csv
backend/generate_data/: config.py  main.py  stories.py
backend/generate_data/generators/: bom.py  customers.py  inventory.py  materials.py  metrics.py  production.py  products.py  purchasing.py  sales.py  suppliers.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/deep-dives/: _data.ts  page.tsx
frontend/src/app/focus/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/charts/: ChartRenderer.tsx  (+3 more)
frontend/src/lib/: api.ts  store.ts  types.ts  websocket.ts
(+13 files in other folders)
